--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -78,3 +78,4 @@ CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
 CONFIG_SCSI_SKHID=y
 # CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT is not set
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
