--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -20,32 +20,39 @@
 		reg = <0x3e>;
 		status = "okay";
 	};
-	aw99703-bl@36 {
-		compatible = "awinic,aw99703-bl";
-		reg = <0x36>;
-		aw99703,hwen-gpio = <&pio 161 0>;
-		/* brightness map level 1:256,2:1024,3:2048 */
-		aw99703,bl-map = <3>;
-		aw99703,using-lsb;
-		aw99703,ovp-level = <2>; /* 31V */
-		aw99703,ocp-level = <1>; /* 1.8A */
-		aw99703,switch-freq = <1>; /* 1000kHz(default) */
-		aw99703,auto-freq-high = <0x10>;
-		aw99703,auto-freq-low = <0x05>;
-		aw99703,bl-fscal-led = <0x15>; /* 21.6mA */
-		aw99703,bl-channel = <2>;
-		aw99703,turn-on-ramp = <0x09>; /* 256ms */
-		aw99703,turn-off-ramp = <0x09>; /* 256ms */
-		aw99703,pwm-trans-dim = <0>; /* 2ms */
-		aw99703,i2c-trans-dim = <0x07>; /* 512ms */
-		aw99703,pwm-mode = <0>; /* 0 pwm enable,1 PWM disable */
-		aw99703,map-type = <1>; /* linear */
-		aw99703,work-mode = <1>; /* backlight */
-		aw99703,flash-timeout-time = <0x05>; /* 500ms(default) */
-		aw99703,flash-current = <0x08>; /* 59.2mA(default) */
-		aw99703,efuse-config = <0x1C 0x61 0x61 0x4C 0x2C 0xC0 0x08 0x00 0x01 0xC0 0x00 0x00 0x50>;
 
+	aw99703_backlight: sprd_backlight@36{
+		compatible = "awinic,aw99703-bl","sm-sm5350";
+		reg = <0x36>;
+		id = <6>;
+		hwen-gpio = <&pio 161 1>;
 		status = "okay";
+
+                aw99703,bl-map = <3>; /* brightness map level 1:256,2:1024,3:2048 */
+                aw99703,using-lsb;
+                aw99703,ovp-level = <2>; /* 0:17.5V, 1:24V, 2:31V, 3:38V, 4:41.5V */
+                aw99703,ocp-level = <1>; /* 0:0.9A, 1:1.8A, 2:2.7A, 3:3.4A */
+                aw99703,switch-freq = <1>; /* 1000kHz(default) */
+                aw99703,auto-freq-high = <0x10>;
+                aw99703,auto-freq-low = <0x05>;
+                aw99703,bl-fscal-led = <0x17>; /* 24.8mA */
+                aw99703,bl-channel = <3>;
+                aw99703,turn-on-ramp = <0x00>; /* 512us */
+                aw99703,turn-off-ramp = <0x04>; /* 8ms */
+                aw99703,pwm-trans-dim = <0>; /* 2ms */
+                aw99703,i2c-trans-dim = <1>; /* 128ms */
+                aw99703,pwm-mode = <1>; /* 1 pwm enable,0 PWM disable */
+                aw99703,map-type = <0>; /* 0 exponential, 4 linear */
+                aw99703,work-mode = <1>; /* backlight */
+                aw99703,default-brightness = <1810>;
+
+                pwm-cfg = <0x0F>;
+                boost-ctl = <0x03>;
+                ctl-bank-en = <0x02>;
+                full-scale-current = <0x17>;
+                map-mode = <0>; /* 0 exponential, 1 linear */
+                current-align-type = <1>;
+                sm5350,default-brightness = <1810>;
 	};
 };
 
@@ -56,7 +63,6 @@
 	backlight {
 		label = "lcd-backlight";
 		led_mode = <6>;
-		pwm_config = <0 1 0 0 0>;
 		max-brightness = <2047>;
 		max-hw-brightness = <2047>;
 		default-brightness = <1810>;
