【Victoria】add swtp gpio for modem[1/2]
add swtp gpio for modem

Change-Id: If2ac4f80d8d76c7f0f0e876e872bf0fe33bf763a
Reviewed-on: https://gerrit.mot.com/2300051
Reviewed-by: <hq101@motorola.com>
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shuxian Zhang <zhangsx1@motorola.com>
Reviewed-by: Mingchao Huang <huangmc3@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -1194,3 +1194,20 @@
         mmi,thermal-mitigation = <(-1) 5000000 4000000 3000000 2500000
                                 2000000 1500000 1000000 500000>;
 };
+
+&swtp {
+	compatible = "mediatek, swtp-eint";
+	interrupt-parent = <&pio>;
+	interrupts = <92 IRQ_TYPE_LEVEL_HIGH>;
+	deb-gpios = <&pio 92 0>;
+	debounce = <512000>;
+	status = "okay";
+};
+&swtp_1 {
+	compatible = "mediatek, swtp1-eint";
+	interrupt-parent = <&pio>;
+	interrupts = <93 IRQ_TYPE_LEVEL_HIGH>;
+	deb-gpios = <&pio 93 0>;
+	debounce = <512000>;
+	status = "okay";
+};
