config: audio: enable ok-google
enable okg function.
disable dual mic.

Signed-off-by: zhangh12 <zhangh12@motorola.com>
Change-Id: I0000000000000000000000000000000000000000
Reviewed-on: https://gerrit.mot.com/2303621
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -81,3 +81,6 @@ CONFIG_HZ_300=y
 
 #Moto Vicky Camera eeprom
 CONFIG_MTK_VICKY_EEPROM_PROJECT=y
+# CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
+CONFIG_MTK_VOW_GVA_SUPPORT=y
+CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
