arm64/dts: devonn: change vio28 voltage configure
- changes vio28 from 2.8v to 3.3v for prox sensor
- file: mt6855-devonn-common-overlay

Change-Id: Iebe967b51de6cf7073b036508675392fbf2b8ab8
Signed-off-by: wt.linliwei <wingte83@motorola.com>
Reviewed-on: https://gerrit.mot.com/2301507
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jianqiu Huang <huangjq9@motorola.com>
Reviewed-by: <hongrz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -295,5 +295,14 @@
 	vmmc-supply = <&mt6369_vmch>;
 };
 #include "devonn-touch.dtsi"
+
+//for alsps sensor tmd2755x
+&mt6369_vio28 {
+	regulator-name = "mt6369_vio28";
+	regulator-min-microvolt = <3300000>;
+	regulator-max-microvolt = <3300000>;
+	regulator-enable-ramp-delay = <1920>;
+};
+
 //#include <k6855v1_64/cust.dtsi>
 /*End of this file, DO NOT ADD ANYTHING HERE*/
