add nt37701-dvt for dvt version[1/3]
add nt37701-dvt for dvt version

Change-Id: Icefc4239c433235198de7098c5a2c41988f19590
Reviewed-on: https://gerrit.mot.com/2301001
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hua Tan <tanhua1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -36,6 +36,7 @@
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
 # CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
 CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ=m
+CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ_V1=m
 CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
 CONFIG_OF_GPIO=y
 #enable zram writeback
