--- a/arch/arm64/boot/dts/mediatek/vicky-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/vicky-display.dtsi
@@ -152,6 +152,29 @@
 
 	};
 
+	panel3@0 {
+		/delete-property/ compatible;
+		/delete-property/ pm-enable-gpios;
+		/delete-property/ reset-gpios;
+		/delete-property/gate-ic;
+
+		compatible = "csot,nt37701,cmd,144hz,v1";
+		reg = <2>;
+		pm-enable-gpios = <&pio 46 0>,
+                          <&pio 154 0>,
+                          <&pio 110 0>,
+                          <&pio 12 0>;
+		reset-gpios = <&pio 85 0>;
+		pinctrl-names = "default";
+		lhbm-enable;
+		port {
+			panel_in3: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+
+	};
+
 	ports {
 		port {
 			dsi_out: endpoint {
