devonn: camera bring up[5/7]
devonn:
--s5kjn1 bring up
--hi1634q bring up
--gc02m1 bring up
--ov02b10 bring up

Change-Id: Idf3b4b63b325c67cac75eb3aa2ec0d683b25959e
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2298407
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
SLTApproved: Zhichao Chen <chenzc2@motorola.com>
Tested-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key
Tested-by: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -14,7 +14,7 @@
 #include <dt-bindings/gpio/gpio.h>
 #include "mediatek/devonn-display.dtsi"
 #include "mediatek/devonn-charger.dtsi"
-
+#include "mediatek/mt6855_devonn_camera_overlay.dtsi"
 
 &dispsys_config {
 	pinctrl-names =
