--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -51,7 +51,7 @@ CONFIG_ZRAM_WRITEBACK=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36515=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_devonn_s5kjn1_mipi_raw mot_devonn_hi1634q_mipi_raw mot_devonn_ov02b10_mipi_raw mot_devonn_gc02m1_mipi_raw"
 CONFIG_MTK_FLASHLIGHT_AW36518=m
 CONFIG_HQ_CAMERA_LDO=m
 # CONFIG_RT4831A_I2C is not set
@@ -79,3 +79,9 @@ CONFIG_MICRON_UFSHID=y
 CONFIG_SCSI_SKHID=y
 CONFIG_GATEIC_OCP2138=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
+
+#Moto devonn Camera
+CONFIG_MOT_DEVONN_CAMERA_PROJECT=y
+
+#add for i2c tool
+CONFIG_I2C_CHARDEV=y
