arm64/config: Devonn: enable kernel bias config
For devinn,we will use bias sm5109 and bias ocp2130.
Enable this config to set the voltage in true when resume the lcd.

Change-Id: Icf0785cd69ac63e37035f8662cdd69e5e9ef2a4c
Signed-off-by: huangxinglue <wingte77@motorola.com>
Reviewed-on: https://gerrit.mot.com/2303640
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -77,4 +77,5 @@ CONFIG_MOTO_TESLA_SWTP_CUST=y
 CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
 CONFIG_SCSI_SKHID=y
+CONFIG_GATEIC_OCP2138=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
