--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -46,6 +46,8 @@ CONFIG_MTK_VIDEO_AW36515=m
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_ov50a_mipi_raw mot_dubai_ov32c_mipi_raw mot_dubai_gc02m1b_mipi_raw mot_dubai_hi1336_mipi_raw"
 # CONFIG_RT4831A_I2C is not set
 CONFIG_SND_SMARTPA_AW882XX=y
+CONFIG_AW_RAMPING_SUPPORT=y
+
 CONFIG_SND_I2S1=y
 CONFIG_TYPEC_FSA4480=m
 CONFIG_MOTO_WLC_ALG_SUPPORT=m
