--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -884,5 +884,10 @@ config DRM_MEDIATEK_PANEL
 	  and uses 24-bits RGB per pixel. It provides a MIPI DSI interface
 	  to host.
 
+config GATEIC_OCP2138
+	tristate "GATEIC OCP2138"
+	default n
+	help
+	  Say Y here if you want to enable this gate driver.
 
 endmenu
