arm64/dts: closed bat ntc temp compensate
closed bat ntc temp compensate funcation.
 for devonn.

Change-Id: I481a6b0007902945f1ac2674f416f8946f0c30a7
Signed-off-by: yangchaojun <wingte81@motorola.com>
Reviewed-on: https://gerrit.mot.com/2305925
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -87,6 +87,7 @@
 
 	ACTIVE_TABLE = <(5)>;
 	R_FG_VALUE = <(5)>;
+	NO_BAT_TEMP_COMPENSATE = <(1)>;
 	df-serialnum = "SB18D39674";
 	#include "bat_setting/mt6879_battery_nf50_atl_5000mah.dtsi"
 };
