Vicky: add boe nt37701a 6.55 inch panel driver[1/3]
add boe nt37701a 6.55 inch panel driver
for vicky

Change-Id: I93496e0e51f04ad1a8f7ac57799a02c87a39f704
Reviewed-on: https://gerrit.mot.com/2306041
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hua Tan <tanhua1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/vicky-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/vicky-display.dtsi
@@ -175,6 +175,29 @@
 
 	};
 
+	panel4@0 {
+		/delete-property/ compatible;
+		/delete-property/ pm-enable-gpios;
+		/delete-property/ reset-gpios;
+		/delete-property/gate-ic;
+
+		compatible = "boe,nt37701a,cmd,144hz";
+		reg = <3>;
+		pm-enable-gpios = <&pio 46 0>,
+                          <&pio 154 0>,
+                          <&pio 110 0>,
+                          <&pio 12 0>;
+		reset-gpios = <&pio 85 0>;
+		pinctrl-names = "default";
+		lhbm-enable;
+		port {
+			panel_in4: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+
+	};
+
 	ports {
 		port {
 			dsi_out: endpoint {
