--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -854,6 +854,17 @@ config DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ_V1
 	  resolution and uses 30-bits RGB per pixel. It provides a
 	  MIPI DSI interface to host.
 
+config DRM_PANEL_BOE_NT37701A_655_FHDP_DPHY_CMD_144HZ
+   tristate "boe nt37701a 655 fhdp dphy cmd mode panel"
+   depends on OF
+   depends on DRM_MIPI_DSI
+   depends on BACKLIGHT_CLASS_DEVICE
+   help
+     Say Y here if you want to enable support for NT37701 DPHY
+     cmd mode Full HD panel. The panel has a 1080x2400
+     resolution and uses 24-bits RGB per pixel. It provides a
+     MIPI DSI interface to host.
+
 config DRM_PANEL_MOT_DUMMY_VDO_60HZ
 	tristate "DRM_PANEL_MOT_DUMMY_VDO_60HZ"
 	depends on OF
