--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-evt1-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-evt1-overlay.dts
@@ -21,10 +21,10 @@
 		target-path = "/";
 		__overlay__ {
 			mot,model = "devonn";
-			mot,board-id = <0x43 0xA100>;
+			mot,board-id = <0x43 0xA300>;
 		};
 	};
 };
 
-#include <devonn_evb/cust.dtsi>
+#include <devonn_evt1/cust.dtsi>
 /*End of this file, DO NOT ADD ANYTHING HERE*/
