Thermal: merge thermal ntc cfg for Devonn
add ap_ntc/ltepa_ntc/nrpa_ntc node,
add thermal ntc config, and merge mtk thermal patch.

Change-Id: Ida19d00570b7267b5050a96344e9c9e9b4816e1b
Reviewed-on: https://gerrit.mot.com/2303827
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yongbin Chen <chenyb1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
@@ -7,6 +7,9 @@
 / {
 	utags: utags { };
 	hw: hw { };
+	tboard_thermistor1: thermal-ntc1 { };
+	tboard_thermistor2: thermal-ntc2 { };
+	tboard_thermistor3: thermal-ntc3 { };
 	charge_leds: charge_leds{ };
 	moto_chg_tcmd: moto_chg_tcmd { };
 };
