arm/dts: devonn usb eye diagram parameter modification
echo 110 > vrt_sel
echo 110 > term_sel
echo 11 > phy_rev6

Change-Id: Ib84a36b00255f9ebd0aaf5b3733bceec88b03d9b
Reviewed-on: https://gerrit.mot.com/2309058
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yuecai Liu <liuyc20@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -304,5 +304,12 @@
 	regulator-enable-ramp-delay = <1920>;
 };
 
+&u2port0{
+	mediatek,eye-vrt = <6>;
+	mediatek,eye-term = <6>;
+	mediatek,rev6 = <3>;
+};
+
+
 //#include <k6855v1_64/cust.dtsi>
 /*End of this file, DO NOT ADD ANYTHING HERE*/
