kernel: Devonn: Add 2nd panel
Bringup 2nd panel ft8726.
Add 2nd panel ft8726 config to let it working normally.

Change-Id: I1c6cac4eaae18dc14ce6b9e01c978998ac91f0cd
Signed-off-by: huangxinglue <wingte77@motorola.com>
Reviewed-on: https://gerrit.mot.com/2309474
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -43,6 +43,7 @@
 # CONFIG_DRM_PANEL_TIANMA_NT36672C_CPHY_VDO_90HZ_RT4801 is not set
 
 CONFIG_DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ=m
+CONFIG_DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ=m
 CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
 CONFIG_OF_GPIO=y
 #enable zram writeback
