arm64/dts/: Devonn: add dtsi config for 2nd panel ft8726
ft8726 + 1080x2400 + 6.497 + video mode.
Add dtsi config for 2nd panel ft8726.

Change-Id: I928f6296814bf8ff4eac314c188b1b8292a98a86
Signed-off-by: huangxinglue <wingte77@motorola.com>
Reviewed-on: https://gerrit.mot.com/2309478
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -146,12 +146,25 @@
 		reg = <1>;
 		pm-enable-gpios = <&pio 161 0>;
 		reset-gpios = <&pio 95 0>;
-		bias_n-gpios = <&pio 8 0>;
-		bias_p-gpios = <&pio 183 0>;
 		rc-enable = <1>;
 		pinctrl-names = "default";
 		port {
 			panel_in2: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+
+	};
+
+	panel3@0 {
+		compatible = "tongxingda,FT8726,vdo,120hz";
+		reg = <2>;
+		pm-enable-gpios = <&pio 161 0>;
+		reset-gpios = <&pio 95 0>;
+		rc-enable = <1>;
+		pinctrl-names = "default";
+		port {
+			panel_in3: endpoint {
 				remote-endpoint = <&dsi_out>;
 			};
 		};
