--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -883,6 +883,15 @@ config DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ
 	  Say Y here if you want to enable support for TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ
 	  panel. It provides a MIPI DSI interface to host.
 
+config DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ
+	tristate "TONGXINGDA 1080*2400 120 HZ VDO ft8726 panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ
+	  panel. It provides a MIPI DSI interface to host.
+
 config DRM_MEDIATEK_PANEL
 	tristate "drm panel common driver"
 	depends on OF
