--- a/drivers/gpu/drm/panel/Makefile
+++ b/drivers/gpu/drm/panel/Makefile
@@ -92,6 +92,7 @@ obj-$(CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ_V1) += dsi-panel-mo
 obj-$(CONFIG_DRM_PANEL_BOE_NT37701A_655_FHDP_DPHY_CMD_144HZ) += dsi-panel-mot-boe-nt37701a-655-fhdp-dphy-cmd-144hz.o
 obj-$(CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ) += dsi-panel-mot-dummy-vdo-60hz.o
 obj-$(CONFIG_DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tianma-icnl9922-649-fhdp-dphy-vdo-120hz.o
+obj-$(CONFIG_DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ) += dsi-panel-mot-tongxingda-ft8726-fhdp-dphy-vdo-120hz.o
 
 
 obj-$(CONFIG_GATEIC_OCP2138) += ocp2138.o
