arm64/dts: support pe2.0 for devonn
Enable pe2.0 feature for detect moto 18W 20W charger.
5.5V 3A.

Change-Id: I4bb1d5ea6aa1355cd9ddbb36f7dd15aa9f4084e0
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2309650
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -14,8 +14,11 @@
 &charger {
 	/* common */
 	battery_cv = <4480000>;
-	max_charger_voltage = <6500000>;
+	max_charger_voltage = <11000000>;
 	min_charger_voltage = <4600000>;
+
+	/*pe2*/
+	fast_charging_indicator = <0x02>;
 
 	/* charging current */
 	usb_charger_current_suspend = <0>;
