arm/dts: DTS rectification
1.config mtk dts before mtk
2.fix overlay & charger dts

Change-Id: If48578459c67605560af91dbc95c1c050e78ab92
Reviewed-on: https://gerrit.mot.com/2309692
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Lei Chen <chenl18@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-base.dtsi
@@ -24,13 +24,12 @@
 	swtp_1: swtp_1 { };
 };
 
-
 &charger {
 	/delete-property/ enable_dynamic_mivr;
+	/delete-property/ enable_fast_charging_indicator;
 };
 
-&usb_type_c {
-	/delete-property/ tcpc,en_wd;
-	/delete-property/ tcpc,en_wd_sbu_polling;
-	/delete-property/ tcpc,en_wd_polling_only;
+&extcon_usb {
+	/delete-property/ vbus-supply;
+	/delete-property/ charger;
 };
