--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -28,6 +28,39 @@
                 mmi,adc-channel-batid = <3>;
                 mmi,adc-channel-vbat = <100>;
 };
+
+&pd_adapter {
+	status = "disabled";
+};
+
+&pe5 {
+	status = "disabled";
+};
+
+&pe4 {
+	status = "disabled";
+};
+
+&pdc {
+	status = "disabled";
+};
+
+&pe2 {
+	status = "disabled";
+};
+
+&pe {
+	status = "disabled";
+};
+
+&rt5133 {
+	status = "disabled";
+};
+
+&mt6375 {
+	status = "disabled";
+};
+
 &lk_charger{
     usb_charger_current = <500000>;
     ac_charger_current = <1500000>;
@@ -40,6 +73,7 @@
     fast_charge_voltage = <3000000>;
     temp_t4_threshold = <60>;
 };
+
 &charger {
         /* common */
         battery_cv = <4450000>;
@@ -119,6 +153,61 @@
         };
 };
 
+
+&i2c6 {
+	clock-frequency = <400000>;
+	sgm4154x_charger: sgm4154x@3B {
+		status = "okay";
+		compatible = "sgm,sgm41542";
+		reg = <0x3B>;
+		interrupt-parent = <&pio>;
+		interrupts = <4 0>;            //irq num base on hardware design
+		sgm,irq-gpio = <&pio 4 0>;     //irq num base on hardware design
+		sgm,chg-en-gpio = <&pio 64 0>;   //gpio num base on hardware design  1.MTK parent node name is pio  2.QUALCOMM parent node name is tlmm or other
+
+		chg_name = "primary_chg";
+		input-voltage-limit-microvolt = <4700000>;
+
+		/* sw jeita  parameter customer defined*/
+		enable_sw_jeita;
+		jeita_temp_above_t4_cv = <0>;
+		jeita_temp_t3_to_t4_cv = <4100000>;
+		jeita_temp_t2_to_t3_cv = <4350000>;
+		jeita_temp_t1_to_t2_cv = <4350000>;
+		jeita_temp_t0_to_t1_cv = <0>;
+		jeita_temp_below_t0_cv = <0>;
+
+		jeita_temp_above_t4_cc_current = <0>;
+		jeita_temp_t3_to_t4_cc_current = <1000000>;
+		jeita_temp_t2_to_t3_cc_current = <1250000>;
+		jeita_temp_t1_to_t2_cc_current = <1000000>;
+		jeita_temp_below_t0_cc_current = <0>;
+
+		temp_t4_thres = <50>;
+		temp_t4_thres_minus_x_degree = <48>;
+		temp_t3_thres = <45>;
+		temp_t3_thres_minus_x_degree = <45>;
+		temp_t2_thres = <20>;
+		temp_t2_thres_plus_x_degree = <15>;
+		temp_t1_thres = <0>;
+		temp_t1_thres_plus_x_degree = <0>;
+		temp_t0_thres = <0>;
+		temp_t0_thres_plus_x_degree = <2>;
+		temp_neg_10_thres = <0>;
+	};
+
+	usb_type_c: wusb3801@60 {
+		compatible = "mediatek,usb_type_c";
+		reg = <0x60>;
+		interrupt-parent = <&pio>;
+		interrupts = <5 0>;
+		wusb3801,irq-gpio = <&pio 5 0x0>;
+
+		status = "okay";
+	};
+};
+
+
 &i2c6 {
 	sgm41543d_charger: sgm41543d@0B {
                 status = "okay";
@@ -175,6 +264,7 @@
 };
 
 &mtk_gauge {
+	charger = <&sgm4154x_charger>;
         charger_2nd = <&sgm41543d_charger>;
 
 	CAR_TUNE_VALUE = <(100)>;
@@ -246,10 +336,13 @@
 };
 
 &charger {
+	charger = <&sgm4154x_charger>;
         charger_2nd = <&sgm41543d_charger>;
 };
 
 &mtk_ctd {
+	bc12 = <&sgm4154x_charger>;
+	bc12_sel = <2>;
         bc12_2nd = <&sgm41543d_charger>;
 };
 
