devonn: arm64/dts: Brinup 2nd touch supplier ft8726
Updata touch dtsi file.
Add touch compatible node in dtsi file.

Change-Id: I0b91174968c1d8fb010ab7d9cda9c5f72e742c82
Signed-off-by: huangxinglue <wingte77@motorola.com>
Reviewed-on: https://gerrit.mot.com/2309720
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jun Weng <wengjun1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
@@ -20,7 +20,7 @@
 	pinctrl-5 = <&ctp_gt9896s_spi_mode>;
 
 	touch@0{
-		compatible = "chipone-tddi";
+		compatible = "chipone-tddi","focaltech,fts";
 		spi-max-frequency = <10000000>;
 		reg = <0x0>;
 		status = "okay";
@@ -31,6 +31,10 @@
         chipone,y-res = <2400>;
         chipone,def-build-id = <0x0101>;
         chipone,def-config-id = <0x0001>;
+	focaltech,reset-gpio = <&pio 3 0x0>;
+	focaltech,irq-gpio = <&pio 22 0x0>;
+	focaltech,max-touch-number = <10>;
+        focaltech,display-coords = <0 0 1080 2400>;
 	};
 };
 
