Update camera driver
devonn:
--Update HI1634Q driver
--Update OV02B10 driver
--Update GC02M1 driver

Change-Id: I594a1583e35446b116e47f1026fbb204e811ae60
Reviewed-on: https://gerrit.mot.com/2312390
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <wingte76@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/imgsensor/src/common/v1_1/mot_devonn_gc02m1_mipi_raw/Makefile
+++ b/drivers/misc/mediatek/imgsensor/src/common/v1_1/mot_devonn_gc02m1_mipi_raw/Makefile
@@ -2,5 +2,4 @@
 # Copyright (C) 2020 MediaTek Inc.
 
 imgsensor_isp6s-objs += \
-	$(subdrv-rpath)/gc02m1_mipi_raw.o
-
+	$(subdrv-rpath)/mot_devonn_gc02m1mipiraw_Sensor.o
