--- a/drivers/misc/mediatek/imgsensor/src/common/v1_1/mot_devonn_hi1634q_mipi_raw/Makefile
+++ b/drivers/misc/mediatek/imgsensor/src/common/v1_1/mot_devonn_hi1634q_mipi_raw/Makefile
@@ -2,4 +2,4 @@
 # Copyright (C) 2020 MediaTek Inc.
 
 imgsensor_isp6s-objs += \
-	$(subdrv-rpath)/hi1634qmipiraw_Sensor.o
+	$(subdrv-rpath)/mot_devonn_hi1634qmipiraw_Sensor.o
