devonn: flashlight aw36515 bring up[3/3]
devonn:
--flashlight aw36515 bring up

Change-Id: I2a84ec237f3372bc9d1f2730092ae0c1e90c237c
Reviewed-on: https://gerrit.mot.com/2312394
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6855.dts
@@ -7112,6 +7112,16 @@
 			compatible = "mediatek,flashlight_core";
 		};
 
+		flashlights_aw36515: flashlights_aw36515{
+			compatible = "mediatek,flashlights_aw36515";
+			decouple = <0>;
+			channel@1 {
+			type = <0>;
+			ct = <0>;
+			part = <0>;
+			};
+		};
+
 		mtk_composite_v4l2_1: mtk_composite_v4l2_1 {
 			compatible = "mediatek,mtk_composite_v4l2_1";
 		};
