arm64/dts: support pd2.0 and pd3.0 charger
support pd2.0 9V2A and
 pd3.0 (pe4.0) 6V3A for devonn.
and set pd_vbus_upper_bound 9V.

Change-Id: I62c9b6b8c814efe669a5c4118b4720022606f88e
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2312545
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -17,8 +17,8 @@
 	max_charger_voltage = <11000000>;
 	min_charger_voltage = <4600000>;
 
-	/*pe2*/
-	fast_charging_indicator = <0x02>;
+	/*pe4 && pdc && pe2*/
+	fast_charging_indicator = <0x0E>;
 
 	/* charging current */
 	usb_charger_current_suspend = <0>;
@@ -44,6 +44,31 @@
 	mmi,enable-charging-limit;
 	mmi,upper-limit-capacity = <65>;
 	mmi,lower-limit-capacity = <60>;
+};
+
+&mt6375_typec {
+	pd-data {
+		/* 5V, 900ma */
+		pd,source-pdo-data = <0x0001905a>;
+
+		/* 9V, 2A */
+		pd,sink-pdo-size = <2>;
+		pd,sink-pdo-data = <0x0002D0C8 0x0002D0C8> ;
+	};
+};
+
+&pdc {
+	pd_vbus_low_bound = <5000000>;
+	pd_vbus_upper_bound = <9000000>;
+
+	/* single charger */
+	sc_input_current = <3000000>;
+	sc_charger_current = <4000000>;
+};
+
+&pe4 {
+	pe40_max_vbus = <6000>;
+	pe40_max_ibus = <3000>;
 };
 
 &mtk_gauge {
