repair otp error
repair otp error
--repair ov02b10 otp error

Change-Id: I5ba02ddf2a88bd120dbf3eb716a29f865eecb693
Reviewed-on: https://gerrit.mot.com/2313295
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <wingte76@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855_devonn_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855_devonn_camera_overlay.dtsi
@@ -530,6 +530,11 @@
 		reg = <0x78>;
 		status = "okay";
 	};
+	mtk_camera_eeprom4:camera_eeprom4@51 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x51>;
+		status = "okay";
+	};
 };
 /* CAMERA EEPROM end */
 
