Devonn: wld: modem: RF SWTP logical configuration
add swtp configuration
RF bringup code commit, submit init code about swtp
Root Cause:RF bringup

Change-Id: Ie2ee01e3ae3d06cc79a242dc75481f0a09ae5b00
push-from:https://gerrit-cn.motorola.com/#/c/36273/2
Reviewed-on: https://gerrit.mot.com/2311847
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yifu Lin <linyf@mt.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6855.dts
@@ -7069,7 +7069,20 @@
 				<&mipi_tx_config0>;
 			clock-names = "engine", "digital", "hs";
 		};
-
+	/* modify by wt.liangnengjie for swtp start */
+	swtp: swtp {
+		compatible = "mediatek, swtp-eint";
+	};
+	swtp_1: swtp_1 {
+		compatible = "mediatek, swtp1-eint";
+	};
+	swtp_2: swtp_2 {
+		compatible = "mediatek, swtp2-eint";
+	};
+	swtp_3: swtp_3 {
+		compatible = "mediatek, swtp3-eint";
+	};
+	/* modify by wt.liangnengjie for swtp end */
 		dsi_te: dsi_te {
 			compatible = "mediatek, dsi_te-eint";
 			status = "disabled";
