--- a/drivers/misc/mediatek/eccci/Kconfig
+++ b/drivers/misc/mediatek/eccci/Kconfig
@@ -61,3 +61,12 @@ config MOTO_TESLA_SWTP_CUST
 	  then it is supported, if no,
 	  it is disabled.
 	  The option default disabled.
+
+config MOTO_DEVONN_SWTP_CUST
+	bool "ECCCI tesla swtp customization"
+	depends on MTK_ECCCI_DRIVER
+	help
+	  This option enables devonn swtp customization, if yes,
+	  then it is supported, if no,
+	  it is disabled.
+	  The option default disabled.
