arm64/dt: devonn: power on fps power
Set fps power VFP always on and remove the power
control of egis.

Change-Id: I0f04d784dc19d4c08ace45d231946747e13c3ddd
Signed-off-by: wuwl10 <wuwl10@mt.com>
Reviewed-on: https://gerrit.mot.com/2315491
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -93,6 +93,13 @@
 
 
 /* FINGERPRINT start */
+
+&mt6369_vfp {
+	regulator-min-microvolt = <3300000>;
+	regulator-max-microvolt = <3300000>;
+	regulator-always-on;
+};
+
 &spi1 {
 	status = "okay";
 	mediatek,pad-select = <0>, <1>;
@@ -120,14 +127,8 @@
 		interrupt-parent = <&pio>;
 		interrupts = <15 IRQ_TYPE_EDGE_RISING 15 0>;
 
-		fp-ctrl-power;
-
 		egistec,gpio_reset = <&pio 157 0x0>;
 		egistec,gpio_irq = <&pio 15 0x0>;
-
-		vcc_fp-supply = <&mt6369_vfp>;	// ldo for support module vcc
-		egis-fp,vcc-voltage = <3300000 3300000>;	// ldo voltage default 3.3V
-		egis-fp,vcc-current = <100000>;
 
 		pinctrl-names = "egis_rst_high", "egis_rst_low", "egis_irq_active", "egis_spi_active", "egis_spi_default";
 		pinctrl-0 = <&fingerfp_rst_high>;
