arm64/dts: devonn: add the dtsi of 2nd backlight ktd3136
Update dtsi file.
Add 2nd backlight ktd3136 dtsi.

Change-Id: I97b74b61456cab0033edbeec63e55732eaf8ee32
Signed-off-by: huangxinglue <wingte77@motorola.com>
Reviewed-on: https://gerrit.mot.com/2315878
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -28,7 +28,7 @@
 	};
 
 	aw99703_backlight: sprd_backlight@36{
-		compatible = "awinic,aw99703-bl","sm-sm5350";
+		compatible = "awinic,aw99703-bl","ktd,ktd3136";
 		reg = <0x36>;
 		id = <6>;
 		hwen-gpio = <&pio 161 1>;
@@ -53,13 +53,19 @@
                 aw99703,work-mode = <1>; /* backlight */
                 aw99703,default-brightness = <1810>;
 
-                pwm-cfg = <0x0F>;
-                boost-ctl = <0x03>;
-                ctl-bank-en = <0x02>;
-                full-scale-current = <0x17>;
-                map-mode = <0>; /* 0 exponential, 1 linear */
-                current-align-type = <1>;
-                sm5350,default-brightness = <1810>;
+                ktd,hwen-gpio = <&pio 161 1>;
+                ktd,pwm-mode = <1>; /* 1 pwm enable,0 PWM disable */
+                ktd,using-lsb;
+                ktd,pwm-frequency = <1>; /* 1MHZ */
+                ktd,bl-fscal-led = <0x19>; /* 25mA */
+                ktd,turn-on-ramp = <0x00>;
+                ktd,turn-off-ramp = <0x04>;
+                ktd,pwm-trans-dim = <0>;
+                ktd,i2c-trans-dim = <1>;
+                ktd,bl-channel = <3>;
+                ktd,ovp-level = <2>;
+                ktd,switching-frequency = <1>;
+                ktd,inductor-current = <1>;
 	};
 };
 
