arm64/dts: add charge led configs for devonn
In DDBR charGing, we need set the charge led blink,
so add the configs for devonn.The LED uses gpio23.

Change-Id: I68db9bb78aad5cf6addf06045e250d17bc6da32d
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2317255
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -130,6 +130,14 @@
 	};
 };
 
+&soc {
+	charge_led {
+		label = "red";
+		led_mode = <2>;
+		gpio_config = <23>;
+	};
+};
+
 &moto_chg_tcmd {
 	compatible = "mmi,moto-chg-tcmd";
 	status = "okay";
