arm64/dts: devonn: sd card switch to fast power down.
Enabel mt6369 fast power down for sd card, to improve power down
time from 260ms to 9us.

eservice: ALPS07360346

Change-Id: Ieaede967eba26c54f9e777a09bfd42289dc98453
Reviewed-on: https://gerrit.mot.com/2318755
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -289,7 +289,7 @@
 
 &mmc1 {
 	cd-gpios = <&pio 14 GPIO_ACTIVE_HIGH>;
-	vmmc-supply = <&mt6369_vmch>;
+	vmmc-supply = <&mt6369_vmch_eint_low>;
 };
 #include "devonn-touch.dtsi"
 
