Add the thermal ntc
add emmc_therm/chg_ntc/mtksflashlight/nwchg_therm node
add the thermal ntc config

Change-Id: Ib8dc6b802c8cef4f7fa96533b685b18d99de951f
Reviewed-on: https://gerrit.mot.com/2321515
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yongbin Chen <chenyb1@motorola.com>
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
@@ -10,6 +10,10 @@
 	tboard_thermistor1: thermal-ntc1 { };
 	tboard_thermistor2: thermal-ntc2 { };
 	tboard_thermistor3: thermal-ntc3 { };
+	tboard_thermistor4: thermal-ntc4 { };
+	tboard_thermistor5: thermal-ntc5 { };
+	tboard_thermistor6: thermal-ntc6 { };
+	tboard_thermistor7: thermal-ntc7 { };
 	charge_leds: charge_leds{ };
 	moto_chg_tcmd: moto_chg_tcmd { };
 };
