arm/dts:vicky:enable fade for aw883xx
update audio dts for vicky;
enable fade flag.

Change-Id: Ia0d7cfc69f5bd8cdc24cedc250c7482c097216d0
Signed-off-by: yaozm1 <yaozm1@mt.com>
Reviewed-on: https://gerrit.mot.com/2321880
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-audio-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-audio-overlay.dtsi
@@ -6,6 +6,7 @@
 		irq-gpio = <&pio 3 0>;
 		reg = <0x34>;
 		sound-channel = <0>;
+		fade-enable = <1>;
 		re-min = <1000>;
 		re-max= <40000>;
 		rename-flag=<1>;
@@ -18,6 +19,7 @@
 		reset-gpio = <&pio 104 0>;
 		irq-gpio = <&pio 6 0>;
 		sound-channel = <1>;
+		fade-enable = <1>;
 		re-min = <1000>;
 		re-max= <40000>;
 		rename-flag=<1>;
