arm64/dts: devonn: remove the unuse dtsi node
Update dtsi file.
Remove unused node in oder to avoid the influence of power sequence.

Change-Id: I56e9186eb6e200326fe0c7f452e62848f057094b
Signed-off-by: huangxinglue <wingte77@motorola.com>
Reviewed-on: https://gerrit.mot.com/2323358
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -84,21 +84,6 @@
 
 
 &pio {
-	mtkfb_pins_lcd_bias_enp0: lcd_bias_enp0_gpio {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO183__FUNC_GPIO183>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-
-	mtkfb_pins_lcd_bias_enn0: lcd_bias_enn0_gpio {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO8__FUNC_GPIO8>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
 
 	mtkfb_pins_lcm_rst_out1_gpio: lcm_rst_out1_gpio {
 		pins_cmd_dat {
@@ -124,14 +109,11 @@
 };
 
 &mtkfb {
-	pinctrl-names = "lcd_bias_enp0_gpio", "lcd_bias_enn0_gpio",
-		"lcm_rst_out1_gpio", "lcm_rst_out0_gpio",
+	pinctrl-names = "lcm_rst_out1_gpio", "lcm_rst_out0_gpio",
 		"mode_te_te";
-	pinctrl-0 = <&mtkfb_pins_lcd_bias_enp0>;
-	pinctrl-1 = <&mtkfb_pins_lcd_bias_enn0>;
-	pinctrl-2 = <&mtkfb_pins_lcm_rst_out1_gpio>;
-	pinctrl-3 = <&mtkfb_pins_lcm_rst_out0_gpio>;
-	pinctrl-4 = <&mtkfb_pins_lcm_dsi_te>;
+	pinctrl-0 = <&mtkfb_pins_lcm_rst_out1_gpio>;
+	pinctrl-1 = <&mtkfb_pins_lcm_rst_out0_gpio>;
+	pinctrl-2 = <&mtkfb_pins_lcm_dsi_te>;
 	status = "okay";
 };
 
