--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -1608,7 +1608,7 @@
 			polling-delay-passive = <0>; /* milliseconds */
 			thermal-sensors = <&tboard_thermistor6>;
 		};
-		nwchg_therm {
+		wchg_therm {
 			polling-delay = <0>; /* milliseconds */
 			polling-delay-passive = <0>; /* milliseconds */
 			thermal-sensors = <&tboard_thermistor7>;
