--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -90,3 +90,7 @@ CONFIG_I2C_CHARDEV=y
 #Add for AW87XXX
 CONFIG_SND_SOC_AW87XXX=m
 CONFIG_SND_SOC_AW87XXX_KERNEL=y
+
+#disable CDMA
+CONFIG_MTK_MD1_SUPPORT=22
+CONFIG_MTK_C2K_LTE_MODE=0
